Cambios en los enlaces

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
         <section id="main_content">
 
-        <p><a href="../node_js-gh-pages/index.html">Instale Node JS en su máquina</a></p>
+        <p><a href="../nodeJS/index.html">Instale Node JS en su máquina</a></p>
         <p><a href="../ConvTemp/index.html">Conversor de temperaturas</a></p>
-        <p><a href="../AdePage-gh-pages/index.html">Menú Principal</a></p>
+        <p><a href="../index.html">Menú Principal</a></p>
 
 
         <footer>
