--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
         <section id="main_content">
 
-        <p><a href="../nodeJS/index.html">Instale Node JS en su máquina</a></p>
+        <p><a href="../nodeJS">Instale Node JS en su máquina</a></p>
         <p><a href="../ConvTemp/index.html">Conversor de temperaturas</a></p>
         <p><a href="../index.html">Menú Principal</a></p>
 
