Añadidos los 3 enlaces

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <section id="main_content">
 
         <p><a href="../nodeJS">Instale Node JS en su máquina</a></p>
-        <p><a href="../ConvTemp/index.html">Conversor de temperaturas</a></p>
-        <p><a href="../index.html">Menú Principal</a></p>
+        <p><a href="../ConversorTemp">Conversor de temperaturas</a></p>
+        <p><a href="../">Menú Principal</a></p>
 
 
         <footer>
