--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
 
         <hr>
 
-        <section id="main_content">
+          <section id="downloads" class="clearfix">
+            <a href="../AnalizadorLexico" id="analizador-lexico" class="button"><span>Analizador léxico</span></a>
+            <a href="/" id="interrogacion" class="button"><span>Próximamemte</span></a>
+            <a href="/" id="interrogacion" class="button"><span>Próximamemte</span></a>
+          </section>
+          <section id="downloads" class="clearfix">
+            <a href="/" id="interrogacion" class="button"><span>Próximamemte</span></a>
+            <a href="../" id="return-main" class="button"><span>Menú principal</span></a>
+            <a href="/" id="interrogacion" class="button"><span>Próximamemte</span></a>
+          </section>
 
         <p><a href="../nodeJS">Instale Node JS en su máquina</a></p>
         <p><a href="../ConversorTemp">Conversor de temperaturas</a></p>
