modificado index de nuevo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
           <section id="downloads" class="clearfix">
             <a href="../AnalizadorLexico" id="analizador-lexico" class="button"><span>Analizador léxico</span></a>
-            <a href="/" id="interrogacion"><span>Próximamemte</span></a>
+            <a id="interrogacion"><span>Próximamemte</span></a>
             <a href="/" id="interrogacion"><span>Próximamemte</span></a>
           </section>
           <section id="downloads" class="clearfix">
