--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
           <section id="downloads" class="clearfix">
             <a href="../AnalizadorLexico" id="analizador-lexico" class="button"><span>Analizador léxico</span></a>
-            <a id="interrogacion"><span>Próximamemte</span></a>
-            <a href="/" id="interrogacion"><span>Próximamemte</span></a>
+            <a href="/" id="interrogacion" class="button"><span>Próximamemte</span></a>
+            <a href="/" id="interrogacion" class="button"><span>Próximamemte</span></a>
           </section>
           <section id="downloads" class="clearfix">
-            <a href="/" id="interrogacion"><span>Próximamemte</span></a>
+            <a href="/" id="interrogacion" class="button"><span>Próximamemte</span></a>
             <a href="../" id="return-main" class="button"><span>Menú principal</span></a>
-            <a href="/" id="interrogacion"><span>Próximamemte</span></a>
+            <a href="/" id="interrogacion" class="button"><span>Próximamemte</span></a>
           </section>
 
 
