--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <a href="/" id="interrogacion" class="button"><span>Próximamemte</span></a>
           </section>
           <section id="downloads" class="clearfix">
-            <a href="/" id="interrogacion" class="button"><span>Próximamemte</span></a>
-            <a href="../" id="return-main" class="button"><span>Menú principal</span></a>
-            <a href="/" id="interrogacion" class="button"><span>Próximamemte</span></a>
+            <a id="interrogacion" class="button"><span>Próximamemte</span></a>
+            <a id="return-main" class="button"><span>Menú principal</span></a>
+            <a id="interrogacion" class="button"><span>Próximamemte</span></a>
           </section>
 
 
