modificado index de nuevo

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <section id="downloads" class="clearfix">
             <a href="../AnalizadorLexico" id="analizador-lexico" class="button"><span>Analizador léxico</span></a>
             <a id="interrogacion" class="button"><span>Próximamemte</span></a>
-            <a href="/" id="interrogacion" class="button"><span>Próximamemte</span></a>
+            <a id="interrogacion" class="button"><span>Próximamemte</span></a>
           </section>
           <section id="downloads" class="clearfix">
             <a id="interrogacion" class="button"><span>Próximamemte</span></a>
