modificado index de nuevo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </section>
           <section id="downloads" class="clearfix">
             <a id="interrogacion" class="button"><span>Próximamemte</span></a>
-            <a id="return-main" class="button"><span>Menú principal</span></a>
+            <a href="/" id="return-main" class="button"><span>Menú principal</span></a>
             <a id="interrogacion" class="button"><span>Próximamemte</span></a>
           </section>
 
