--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/alu0100769609/PLPage/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/alu0100769609/PLPage/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
-          <a href="https://github.com/alu0100769609/PLPage" id="view-on-github" class="button"><span>View on GitHub</span></a>
+          <a href="../PLPage/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="../PLPage/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/alu0100769609/PL-Page" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
         <hr>
 
           <section id="downloads" class="clearfix">
             <a href="../AnalizadorLexico" id="analizador-lexico" class="button"><span>Analizador léxico</span></a>
-            <a id="interrogacion" class="button"><span>Próximamemte</span></a>
-            <a id="interrogacion" class="button"><span>Próximamemte</span></a>
+            <a href="../CSV" id="interrogacion" class="button"><span>CSV</span></a>
+            <a href="../ConversorTemp" id="interrogacion" class="button"><span>Conv_Temp</span></a>
           </section>
           <section id="downloads" class="clearfix">
-            <a id="interrogacion" class="button"><span>Próximamemte</span></a>
+            <a href="../nodeJS" id="interrogacion" class="button"><span>NodeJS</span></a>
             <a href="/" id="return-main" class="button"><span>Menú principal</span></a>
             <a id="interrogacion" class="button"><span>Próximamemte</span></a>
           </section>
