--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 
           <section id="downloads" class="clearfix">
             <a href="../AnalizadorLexico" id="analizador-lexico" class="button"><span>Analizador léxico</span></a>
-            <a href="../CSV" id="interrogacion" class="button"><span>CSV</span></a>
-            <a href="../ConversorTemp" id="interrogacion" class="button"><span>Conv_Temp</span></a>
+            <a href="../CSV" id="comma-separated-value" class="button"><span>CSV</span></a>
+            <a href="../ConversorTemp" id="conversor-temperatura" class="button"><span>Conv_Temp</span></a>
           </section>
           <section id="downloads" class="clearfix">
-            <a href="../nodeJS" id="interrogacion" class="button"><span>NodeJS</span></a>
+            <a href="../nodeJS" id="nodejs" class="button"><span>NodeJS</span></a>
             <a href="/" id="return-main" class="button"><span>Menú principal</span></a>
             <a id="interrogacion" class="button"><span>Próximamemte</span></a>
           </section>
