Modificando PL-Page para el curso 2016

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
 
         <hr>
-
+<!--
           <section id="downloads" class="clearfix">
             <a href="../AnalizadorLexico" id="analizador-lexico" class="button"><span>Analizador léxico</span></a>
             <a href="../CSV" id="comma-separated-value" class="button"><span>CSV</span></a>
@@ -40,7 +40,18 @@
             <a href="/" id="return-main" class="button"><span>Menú principal</span></a>
             <a id="interrogacion" class="button"><span>Próximamemte</span></a>
           </section>
+-->
 
+         <section id="downloads" class="clearfix">
+            <a id="interrogacion" class="button"><span>Próximamemte</span></a>
+            <a id="interrogacion" class="button"><span>Próximamemte</span></a>
+            <a id="interrogacion" class="button"><span>Próximamemte</span></a>
+         </section>
+         <section id="downloads" class="clearfix">
+            <a id="interrogacion" class="button"><span>Próximamemte</span></a>
+            <a id="interrogacion" class="button"><span>Próximamemte</span></a>
+             <a id="interrogacion" class="button"><span>Próximamemte</span></a>
+         </section>
 
         <footer>
           Procesadores de Lenguajes is maintained by <a href="https://github.com/alu0100769609">alu0100769609</a><br>
