Modificando PL-Page para el curso 2016

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </section>
 
         <hr>
-<!--
+<!-- ESTO PERTENECE A LAS PRÁCTICAS DEL AÑO 2014/2015, SE QUEDAN OCULTAS PARA QUE NADIE LAS VEA
           <section id="downloads" class="clearfix">
             <a href="../AnalizadorLexico" id="analizador-lexico" class="button"><span>Analizador léxico</span></a>
             <a href="../CSV" id="comma-separated-value" class="button"><span>CSV</span></a>
